Prevent jumpy map

--- a/assets/arrival.css
+++ b/assets/arrival.css
@@ -37,20 +37,24 @@ main {
 
 #bus-stop-map {
   position: relative;
+  padding-top: 50%;
 }
 #bus-stop-map img {
   width: 100%;
   vertical-align: top;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
-#bus-stop-map:before {
+#bus-stop-map:after {
   opacity: 0;
   pointer-events: none;
   content: '';
   position: absolute;
-  bottom: 49%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 10px) scale(.5);
-  transform-origin: bottom center;
+  transform: translate(-50%, -150%) scale(.5);
+  transform-origin: top center;
   width: 30px;
   height: 40px;
   background: transparent url(../assets/images/stop-active.svg) no-repeat bottom;
@@ -61,11 +65,11 @@ main {
 @keyframes appear {
   80% {
     opacity: 1;
-    transform: translate(-50%, 0) scale(1.1);
+    transform: translate(-50%, -100%) scale(1.1);
   }
   100% {
     opacity: 1;
-    transform: translate(-50%, 0) scale(1);
+    transform: translate(-50%, -100%) scale(1);
   }
 }
 h1 {
